--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,30 @@
 body {
     margin: 0px;
 }
+
+#enemis {
+    
+}
+
+#clicker {
+    width: 70%;
+    height: 370px;
+}
+
+#alliés {
+    display: flex;
+    width: 70%;
+}
+
+.carte {
+    
+}
+
+#principal {
+
+}
+
+.img {
+    width: 100%;
+    height: 246px;
+}
