--- a/css/style.css
+++ b/css/style.css
@@ -2,22 +2,31 @@ body {
     margin: 0px;
 }
 
+main {
+    display: flex;
+}
+
+/* div plateau */
+#plateau {
+    width: 50%;
+}
+
 #enemis {
-    
+    width: 99%;
 }
 
 #clicker {
-    width: 70%;
+    width: 100%;
     height: 370px;
 }
 
-#alliés {
+#allies {
     display: flex;
-    width: 70%;
+    width: 99%;
 }
 
 .carte {
-    
+    /* margin: 1px; */
 }
 
 #principal {
@@ -25,6 +34,38 @@ body {
 }
 
 .img {
-    width: 100%;
-    height: 246px;
+    width: 99%;
+    height: 216px;
+}
+
+/* div shop */
+
+.shop {
+    width: 25%;
+}
+
+    /* shop armes */
+
+#shop_armes {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.img_armes {
+    width: 99%;
+    height: 91px;
+   
+}
+
+    /* shop alliés */
+
+#shop_allies {
+    
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.img_allies {
+    width: 99%;
+    height: 216px;
 }
